workloads/immich-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-proxy
  labels:
    app: immich-proxy
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: immich-proxy
  template:
    metadata:
      labels:
        app: immich-proxy
    spec:
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 64Mi
      tolerations:
        - key: pi
          operator: Equal
          value: "true"
          effect: NoSchedule
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: workload-type
                    operator: In
                    values:
                      - pi-arm
            - weight: 50
              preference:
                matchExpressions:
                  - key: workload-type
                    operator: In
                    values:
                      - general
      containers:
        - name: immich-proxy
          image: ghcr.io/alangrainger/immich-public-proxy:3.3.1
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: &port 3000
              name: http
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /share/healthcheck
              port: *port
            initialDelaySeconds: 5
            periodSeconds: 15
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /share/healthcheck
              port: *port
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 3
