workloads/immich-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-proxy
  labels:
    app: immich-proxy
spec:
  type: ClusterIP
  selector:
    app: immich-proxy
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
